# complex_editor_project

./: .gitattributes  .gitignore  CE_BRIDGE_API.md  CHANGELOG.md  ComplexEditor.spec  README.md  build_exe.sh  collect_ce_logs.ps1  fix_and_build.sh  mypy.ini  pyproject.toml  pyproject.toml.bak.1759904803  requirements.txt  sitecustomize.py  temp_patch.diff  ui_skeleton.py
complex_editor/: __init__.py
docs/: ce_linker_match_selection.md
src/: mdb_api.py
tests/: conftest.py  test_adapters_params.py  test_admin_logs_endpoint.py  test_app_context_db.py  test_bridge_service.py  test_bridge_wizard_ui.py  test_buffer_loader.py  test_buffer_loader_handles_pinS.py  test_buffer_loader_prefill.py  test_buffer_ops.py  test_buffer_persistence.py  test_buffer_preload.py  test_ce_linker_match_selection.py  test_cli_add.py  test_cli_dump.py  test_cli_list.py  test_complex_editor_entry.py  test_config_loader.py  test_db_overlay_runtime.py  test_edit_existing_complex.py  test_edit_existing_complex_flow.py  test_entry_load_buffer_wizard.py  test_exception_logging.py  test_export_service.py  test_fallback_macro.py  test_first_run.py  test_headless_exports.py  test_load_from_subcomponent.py  test_logging_config.py  test_macro_param_aliases.py  test_macro_params_dialog_roundtrip.py  test_macro_params_dialog_spinbox.py  test_macro_params_roundtrip.py  test_macro_selector.py  test_macro_xml_translator.py  test_main_window_buffer.py  test_main_window_buffer_list.py  test_main_window_buffer_mode_populates_tables.py  test_main_window_create_buffer.py  test_main_window_edit_buffer.py  (+35 more)
(+142 files in other folders)
